docs/v1.3.15/en/api/catalog-ui.md
---
title: Gauntlet UI 类目录 / Class Catalog
sidebar: auto
---

# Gauntlet UI Class Catalog

This page lists every public type in this area from the 1.3.15 source, grouped by namespace. **265** types total, **265** with a deep doc page (linked). Auto-generated by `tools/gen-class-catalog.mjs`.

> Legend: C=class S=struct I=interface E=enum. 🔗 = has a deep doc page.

## TaleWorlds.GauntletUI (58)

| | 名称 Name | 文档 Doc |
|---|---|---|
| E | [AlignmentAxis](./campaign-ext/AlignmentAxis.md) | 🔗 |
| C | [AnimatedDropdownWidget](./campaign-ext/AnimatedDropdownWidget.md) | 🔗 |
| C | [AnimationInterpolation](./campaign-ext/AnimationInterpolation.md) | 🔗 |
| C | [AudioProperty](./campaign-ext/AudioProperty.md) | 🔗 |
| C | [Brush](./campaign-ext/Brush.md) | 🔗 |
| C | [BrushAnimation](./campaign-ext/BrushAnimation.md) | 🔗 |
| C | [BrushAnimationKeyFrame](./campaign-ext/BrushAnimationKeyFrame.md) | 🔗 |
| C | [BrushAnimationProperty](./campaign-ext/BrushAnimationProperty.md) | 🔗 |
| E | [BrushAnimationPropertyType](./campaign-ext/BrushAnimationPropertyType.md) | 🔗 |
| C | [BrushFactory](./campaign-ext/BrushFactory.md) | 🔗 |
| C | [BrushLayer](./campaign-ext/BrushLayer.md) | 🔗 |
| C | [BrushLayerAnimation](./campaign-ext/BrushLayerAnimation.md) | 🔗 |
| E | [BrushLayerSizePolicy](./campaign-ext/BrushLayerSizePolicy.md) | 🔗 |
| S | [BrushLayerState](./campaign-ext/BrushLayerState.md) | 🔗 |
| C | [BrushListPanel](./campaign-ext/BrushListPanel.md) | 🔗 |
| E | [BrushOverlayMethod](./campaign-ext/BrushOverlayMethod.md) | 🔗 |
| C | [BrushRenderer](./campaign-ext/BrushRenderer.md) | 🔗 |
| E | [BrushRendererAnimationState](./campaign-ext/BrushRendererAnimationState.md) | 🔗 |
| S | [BrushState](./campaign-ext/BrushState.md) | 🔗 |
| C | [CircleActionSelectorWidget](./campaign-ext/CircleActionSelectorWidget.md) | 🔗 |
| C | [CircleItemPlacerWidget](./campaign-ext/CircleItemPlacerWidget.md) | 🔗 |
| C | [ContainerItemDescription](./campaign-ext/ContainerItemDescription.md) | 🔗 |
| C | [EditorAttribute](./campaign-ext/EditorAttribute.md) | 🔗 |
| C | [EventManager](./campaign-ext/EventManager.md) | 🔗 |
| C | [FontFactory](./campaign-ext/FontFactory.md) | 🔗 |
| E | [Function](./campaign-ext/Function.md) | 🔗 |
| C | [GauntletExtensions](./campaign-ext/GauntletExtensions.md) | 🔗 |
| E | [GuiEventResult](./campaign-ext/GuiEventResult.md) | 🔗 |
| E | [GuiEventType](./campaign-ext/GuiEventType.md) | 🔗 |
| E | [HorizontalAlignment](./campaign-ext/HorizontalAlignment.md) | 🔗 |
| I | [IBrushAnimationState](./campaign-ext/IBrushAnimationState.md) | 🔗 |
| I | [IBrushLayerData](./campaign-ext/IBrushLayerData.md) | 🔗 |
| I | [IDataSource](./campaign-ext/IDataSource.md) | 🔗 |
| I | [IDropContainer](./campaign-ext/IDropContainer.md) | 🔗 |
| C | [ImageFit](./campaign-ext/ImageFit.md) | 🔗 |
| E | [ImageFitTypes](./campaign-ext/ImageFitTypes.md) | 🔗 |
| E | [ImageHorizontalAlignments](./campaign-ext/ImageHorizontalAlignments.md) | 🔗 |
| E | [ImageVerticalAlignments](./campaign-ext/ImageVerticalAlignments.md) | 🔗 |
| C | [Language](./campaign-ext/Language.md) | 🔗 |
| E | [MouseCursors](./campaign-ext/MouseCursors.md) | 🔗 |
| C | [PropertyOwnerObject](./campaign-ext/PropertyOwnerObject.md) | 🔗 |
| C | [ResourceTextureProvider](./campaign-ext/ResourceTextureProvider.md) | 🔗 |
| E | [SizePolicy](./campaign-ext/SizePolicy.md) | 🔗 |
| C | [SoundProperties](./campaign-ext/SoundProperties.md) | 🔗 |
| C | [Style](./campaign-ext/Style.md) | 🔗 |
| E | [StyleAnimationMode](./campaign-ext/StyleAnimationMode.md) | 🔗 |
| C | [StyleLayer](./campaign-ext/StyleLayer.md) | 🔗 |
| C | [TextureProvider](./campaign-ext/TextureProvider.md) | 🔗 |
| C | [TextureProviderFactory](./campaign-ext/TextureProviderFactory.md) | 🔗 |
| E | [Type](./mission-ext/Type.md) | 🔗 |
| C | [UIContext](./campaign-ext/UIContext.md) | 🔗 |
| E | [ValueType](./campaign-ext/ValueType.md) | 🔗 |
| E | [VerticalAlignment](./campaign-ext/VerticalAlignment.md) | 🔗 |
| C | [VisualDefinition](./campaign-ext/VisualDefinition.md) | 🔗 |
| C | [VisualState](./mission-ext/VisualState.md) | 🔗 |
| E | [VisualStateAnimationState](./campaign-ext/VisualStateAnimationState.md) | 🔗 |
| C | [WidgetComponent](./campaign-ext/WidgetComponent.md) | 🔗 |
| C | [WidgetInfo](./campaign-ext/WidgetInfo.md) | 🔗 |

## TaleWorlds.GauntletUI.BaseTypes (29)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [AutoScrollParameters](./campaign-ext/AutoScrollParameters.md) | 🔗 |
| C | [BasicContainer](./campaign-ext/BasicContainer.md) | 🔗 |
| C | [BrushWidget](./campaign-ext/BrushWidget.md) | 🔗 |
| E | [ButtonType](./campaign-ext/ButtonType.md) | 🔗 |
| C | [ButtonWidget](./campaign-ext/ButtonWidget.md) | 🔗 |
| C | [Container](./campaign-ext/Container.md) | 🔗 |
| C | [DragCarrierWidget](./campaign-ext/DragCarrierWidget.md) | 🔗 |
| C | [DropdownWidget](./campaign-ext/DropdownWidget.md) | 🔗 |
| C | [EditableTextWidget](./campaign-ext/EditableTextWidget.md) | 🔗 |
| C | [FloatInputTextWidget](./campaign-ext/FloatInputTextWidget.md) | 🔗 |
| C | [GridWidget](./campaign-ext/GridWidget.md) | 🔗 |
| E | [ImageSizePolicies](./mission-ext/ImageSizePolicies.md) | 🔗 |
| C | [ImageWidget](./campaign-ext/ImageWidget.md) | 🔗 |
| C | [IntegerInputPercentageTextWidget](./campaign-ext/IntegerInputPercentageTextWidget.md) | 🔗 |
| C | [IntegerInputTextWidget](./campaign-ext/IntegerInputTextWidget.md) | 🔗 |
| C | [ListPanel](./campaign-ext/ListPanel.md) | 🔗 |
| C | [MaskedTextureWidget](./campaign-ext/MaskedTextureWidget.md) | 🔗 |
| C | [OnlineImageTextureWidget](./campaign-ext/OnlineImageTextureWidget.md) | 🔗 |
| C | [RichTextWidget](./campaign-ext/RichTextWidget.md) | 🔗 |
| C | [ScrollablePanel](./campaign-ext/ScrollablePanel.md) | 🔗 |
| C | [ScrollablePanelFixedHeaderWidget](./campaign-ext/ScrollablePanelFixedHeaderWidget.md) | 🔗 |
| C | [ScrollbarWidget](./campaign-ext/ScrollbarWidget.md) | 🔗 |
| C | [SelectedStateBrushWidget](./campaign-ext/SelectedStateBrushWidget.md) | 🔗 |
| C | [SliderWidget](./campaign-ext/SliderWidget.md) | 🔗 |
| C | [TabControl](./campaign-ext/TabControl.md) | 🔗 |
| C | [TabToggleWidget](./campaign-ext/TabToggleWidget.md) | 🔗 |
| C | [TextureWidget](./campaign-ext/TextureWidget.md) | 🔗 |
| C | [TextWidget](./campaign-ext/TextWidget.md) | 🔗 |
| C | [Widget](./campaign-ext/Widget.md) | 🔗 |

## TaleWorlds.GauntletUI.Data (15)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [GauntletMovie](./gui/GauntletMovie.md) | 🔗 |
| C | [GauntletView](./campaign-ext/GauntletView.md) | 🔗 |
| C | [GeneratedGauntletMovie](./campaign-ext/GeneratedGauntletMovie.md) | 🔗 |
| C | [GeneratedWidgetData](./campaign-ext/GeneratedWidgetData.md) | 🔗 |
| I | [IGauntletMovie](./campaign-ext/IGauntletMovie.md) | 🔗 |
| I | [IGeneratedGauntletMovieRoot](./campaign-ext/IGeneratedGauntletMovieRoot.md) | 🔗 |
| C | [ItemTemplateUsage](./campaign-ext/ItemTemplateUsage.md) | 🔗 |
| C | [ItemTemplateUsageWithData](./campaign-ext/ItemTemplateUsageWithData.md) | 🔗 |
| C | [PrefabDatabindingExtension](./campaign-ext/PrefabDatabindingExtension.md) | 🔗 |
| C | [WidgetAttributeKeyTypeCommand](./campaign-ext/WidgetAttributeKeyTypeCommand.md) | 🔗 |
| C | [WidgetAttributeKeyTypeCommandParameter](./campaign-ext/WidgetAttributeKeyTypeCommandParameter.md) | 🔗 |
| C | [WidgetAttributeKeyTypeDataSource](./campaign-ext/WidgetAttributeKeyTypeDataSource.md) | 🔗 |
| C | [WidgetAttributeValueTypeBinding](./campaign-ext/WidgetAttributeValueTypeBinding.md) | 🔗 |
| C | [WidgetAttributeValueTypeBindingPath](./campaign-ext/WidgetAttributeValueTypeBindingPath.md) | 🔗 |
| C | [WidgetInstantiationResultDatabindingExtension](./campaign-ext/WidgetInstantiationResultDatabindingExtension.md) | 🔗 |

## TaleWorlds.GauntletUI.ExtraWidgets (24)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [AnimatedNumberTextWidget](./campaign-ext/AnimatedNumberTextWidget.md) | 🔗 |
| C | [CustomWidgetManager](./campaign-ext/CustomWidgetManager.md) | 🔗 |
| C | [DelayedStateChanger](./campaign-ext/DelayedStateChanger.md) | 🔗 |
| C | [DialogButtonsParentWidget](./campaign-ext/DialogButtonsParentWidget.md) | 🔗 |
| C | [DisabledAlphaChangerWidget](./campaign-ext/DisabledAlphaChangerWidget.md) | 🔗 |
| C | [FillBar](./campaign-ext/FillBar.md) | 🔗 |
| C | [FillBarHorizontalWidget](./campaign-ext/FillBarHorizontalWidget.md) | 🔗 |
| C | [FillBarVerticalClipTierColorsWidget](./campaign-ext/FillBarVerticalClipTierColorsWidget.md) | 🔗 |
| C | [FillBarVerticalClipWidget](./campaign-ext/FillBarVerticalClipWidget.md) | 🔗 |
| C | [FillBarVerticalWidget](./campaign-ext/FillBarVerticalWidget.md) | 🔗 |
| C | [FillBarWidget](./campaign-ext/FillBarWidget.md) | 🔗 |
| C | [InputKeyVisualWidget](./campaign-ext/InputKeyVisualWidget.md) | 🔗 |
| C | [MouseWidget](./campaign-ext/MouseWidget.md) | 🔗 |
| C | [ScrollingRichTextWidget](./campaign-ext/ScrollingRichTextWidget.md) | 🔗 |
| C | [ScrollingTextWidget](./campaign-ext/ScrollingTextWidget.md) | 🔗 |
| C | [SiblingIndexVisibilityWidget](./campaign-ext/SiblingIndexVisibilityWidget.md) | 🔗 |
| C | [SmoothDecreaseIndicatorFillBar](./campaign-ext/SmoothDecreaseIndicatorFillBar.md) | 🔗 |
| C | [StateSyncWidget](./campaign-ext/StateSyncWidget.md) | 🔗 |
| C | [StringBasedVisibilityWidget](./campaign-ext/StringBasedVisibilityWidget.md) | 🔗 |
| E | [TooltipPositioningType](./campaign-ext/TooltipPositioningType.md) | 🔗 |
| C | [TooltipWidget](./campaign-ext/TooltipWidget.md) | 🔗 |
| C | [TwoWaySliderWidget](./campaign-ext/TwoWaySliderWidget.md) | 🔗 |
| C | [ValueBasedVisibilityWidget](./campaign-ext/ValueBasedVisibilityWidget.md) | 🔗 |
| E | [WatchTypes](./mission-ext/WatchTypes.md) | 🔗 |

## TaleWorlds.GauntletUI.ExtraWidgets.Graph (3)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [GraphLinePointWidget](./campaign-ext/GraphLinePointWidget.md) | 🔗 |
| C | [GraphLineWidget](./campaign-ext/GraphLineWidget.md) | 🔗 |
| C | [GraphWidget](./campaign-ext/GraphWidget.md) | 🔗 |

## TaleWorlds.GauntletUI.GamepadNavigation (4)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [GamepadNavigationForcedScopeCollection](./campaign-ext/GamepadNavigationForcedScopeCollection.md) | 🔗 |
| C | [GamepadNavigationScope](./campaign-ext/GamepadNavigationScope.md) | 🔗 |
| E | [GamepadNavigationTypes](./campaign-ext/GamepadNavigationTypes.md) | 🔗 |
| C | [GauntletGamepadNavigationManager](./campaign-ext/GauntletGamepadNavigationManager.md) | 🔗 |

## TaleWorlds.GauntletUI.GauntletInput (2)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [GauntletInputContext](./campaign-ext/GauntletInputContext.md) | 🔗 |
| I | [IReadonlyInputContext](./campaign-ext/IReadonlyInputContext.md) | 🔗 |

## TaleWorlds.GauntletUI.Layout (10)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [DefaultLayout](./campaign-ext/DefaultLayout.md) | 🔗 |
| C | [DragCarrierLayout](./campaign-ext/DragCarrierLayout.md) | 🔗 |
| E | [GridDirection](./campaign-ext/GridDirection.md) | 🔗 |
| E | [GridHorizontalLayoutMethod](./campaign-ext/GridHorizontalLayoutMethod.md) | 🔗 |
| C | [GridLayout](./campaign-ext/GridLayout.md) | 🔗 |
| E | [GridVerticalLayoutMethod](./campaign-ext/GridVerticalLayoutMethod.md) | 🔗 |
| I | [ILayout](./campaign-ext/ILayout.md) | 🔗 |
| E | [LayoutMethod](./campaign-ext/LayoutMethod.md) | 🔗 |
| C | [StackLayout](./campaign-ext/StackLayout.md) | 🔗 |
| C | [TextLayout](./campaign-ext/TextLayout.md) | 🔗 |

## TaleWorlds.GauntletUI.PrefabSystem (26)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [ConstantDefinition](./campaign-ext/ConstantDefinition.md) | 🔗 |
| E | [ConstantDefinitionType](./campaign-ext/ConstantDefinitionType.md) | 🔗 |
| C | [CustomWidgetType](./campaign-ext/CustomWidgetType.md) | 🔗 |
| C | [GeneratedPrefabContext](./campaign-ext/GeneratedPrefabContext.md) | 🔗 |
| C | [GeneratedPrefabInstantiationResult](./campaign-ext/GeneratedPrefabInstantiationResult.md) | 🔗 |
| I | [IGeneratedUIPrefabCreator](./campaign-ext/IGeneratedUIPrefabCreator.md) | 🔗 |
| C | [PrefabExtension](./campaign-ext/PrefabExtension.md) | 🔗 |
| C | [PrefabExtensionContext](./campaign-ext/PrefabExtensionContext.md) | 🔗 |
| C | [VisualDefinitionTemplate](./campaign-ext/VisualDefinitionTemplate.md) | 🔗 |
| C | [VisualStateTemplate](./campaign-ext/VisualStateTemplate.md) | 🔗 |
| C | [WidgetAttributeContext](./campaign-ext/WidgetAttributeContext.md) | 🔗 |
| C | [WidgetAttributeKeyType](./campaign-ext/WidgetAttributeKeyType.md) | 🔗 |
| C | [WidgetAttributeKeyTypeAttribute](./campaign-ext/WidgetAttributeKeyTypeAttribute.md) | 🔗 |
| C | [WidgetAttributeKeyTypeId](./campaign-ext/WidgetAttributeKeyTypeId.md) | 🔗 |
| C | [WidgetAttributeKeyTypeParameter](./campaign-ext/WidgetAttributeKeyTypeParameter.md) | 🔗 |
| C | [WidgetAttributeTemplate](./campaign-ext/WidgetAttributeTemplate.md) | 🔗 |
| C | [WidgetAttributeValueType](./campaign-ext/WidgetAttributeValueType.md) | 🔗 |
| C | [WidgetAttributeValueTypeConstant](./campaign-ext/WidgetAttributeValueTypeConstant.md) | 🔗 |
| C | [WidgetAttributeValueTypeDefault](./campaign-ext/WidgetAttributeValueTypeDefault.md) | 🔗 |
| C | [WidgetAttributeValueTypeParameter](./campaign-ext/WidgetAttributeValueTypeParameter.md) | 🔗 |
| C | [WidgetCreationData](./campaign-ext/WidgetCreationData.md) | 🔗 |
| C | [WidgetExtensions](./campaign-ext/WidgetExtensions.md) | 🔗 |
| C | [WidgetFactory](./campaign-ext/WidgetFactory.md) | 🔗 |
| C | [WidgetInstantiationResult](./campaign-ext/WidgetInstantiationResult.md) | 🔗 |
| C | [WidgetPrefab](./campaign-ext/WidgetPrefab.md) | 🔗 |
| C | [WidgetTemplate](./campaign-ext/WidgetTemplate.md) | 🔗 |

## TaleWorlds.TwoDimension (51)

| | 名称 Name | 文档 Doc |
|---|---|---|
| S | [BitmapFontCharacter](./campaign-ext/BitmapFontCharacter.md) | 🔗 |
| C | [EditableText](./campaign-ext/EditableText.md) | 🔗 |
| C | [Font](./campaign-ext/Font.md) | 🔗 |
| S | [FontData](./campaign-ext/FontData.md) | 🔗 |
| E | [FontStyle](./campaign-ext/FontStyle.md) | 🔗 |
| I | [IDrawObject](./campaign-ext/IDrawObject.md) | 🔗 |
| I | [ILanguage](./campaign-ext/ILanguage.md) | 🔗 |
| S | [ImageDrawObject](./campaign-ext/ImageDrawObject.md) | 🔗 |
| I | [IText](./campaign-ext/IText.md) | 🔗 |
| I | [ITexture](./campaign-ext/ITexture.md) | 🔗 |
| I | [ITwoDimensionPlatform](./campaign-ext/ITwoDimensionPlatform.md) | 🔗 |
| I | [ITwoDimensionResourceContext](./campaign-ext/ITwoDimensionResourceContext.md) | 🔗 |
| C | [Material](./engine/Material.md) | 🔗 |
| C | [MaterialPool](./campaign-ext/MaterialPool.md) | 🔗 |
| C | [Mathf](./campaign-ext/Mathf.md) | 🔗 |
| E | [MeshTopology](./campaign-ext/MeshTopology.md) | 🔗 |
| C | [PrimitivePolygonMaterial](./campaign-ext/PrimitivePolygonMaterial.md) | 🔗 |
| S | [Quad](./campaign-ext/Quad.md) | 🔗 |
| S | [Rectangle2D](./campaign-ext/Rectangle2D.md) | 🔗 |
| C | [RichText](./campaign-ext/RichText.md) | 🔗 |
| C | [RichTextException](./campaign-ext/RichTextException.md) | 🔗 |
| C | [RichTextLinkGroup](./campaign-ext/RichTextLinkGroup.md) | 🔗 |
| C | [RichTextParser](./campaign-ext/RichTextParser.md) | 🔗 |
| C | [RichTextPart](./campaign-ext/RichTextPart.md) | 🔗 |
| E | [RichTextPartType](./campaign-ext/RichTextPartType.md) | 🔗 |
| C | [RichTextTag](./campaign-ext/RichTextTag.md) | 🔗 |
| C | [RichTextTagParser](./campaign-ext/RichTextTagParser.md) | 🔗 |
| E | [RichTextTagType](./campaign-ext/RichTextTagType.md) | 🔗 |
| S | [ScissorTestInfo](./campaign-ext/ScissorTestInfo.md) | 🔗 |
| C | [SimpleMaterial](./campaign-ext/SimpleMaterial.md) | 🔗 |
| S | [SimpleRectangle](./campaign-ext/SimpleRectangle.md) | 🔗 |
| C | [Sprite](./campaign-ext/Sprite.md) | 🔗 |
| C | [SpriteCategory](./campaign-ext/SpriteCategory.md) | 🔗 |
| C | [SpriteData](./campaign-ext/SpriteData.md) | 🔗 |
| C | [SpriteGeneric](./campaign-ext/SpriteGeneric.md) | 🔗 |
| S | [SpriteNinePatchParameters](./campaign-ext/SpriteNinePatchParameters.md) | 🔗 |
| C | [SpritePart](./campaign-ext/SpritePart.md) | 🔗 |
| C | [StyleFontContainer](./campaign-ext/StyleFontContainer.md) | 🔗 |
| C | [Text](./campaign-ext/Text.md) | 🔗 |
| S | [TextDrawObject](./campaign-ext/TextDrawObject.md) | 🔗 |
| E | [TextHorizontalAlignment](./campaign-ext/TextHorizontalAlignment.md) | 🔗 |
| C | [TextMaterial](./campaign-ext/TextMaterial.md) | 🔗 |
| C | [TextParser](./campaign-ext/TextParser.md) | 🔗 |
| C | [TextPart](./campaign-ext/TextPart.md) | 🔗 |
| C | [TextToken](./campaign-ext/TextToken.md) | 🔗 |
| C | [Texture](./engine/Texture.md) | 🔗 |
| E | [TextVerticalAlignment](./campaign-ext/TextVerticalAlignment.md) | 🔗 |
| E | [TokenType](./campaign-ext/TokenType.md) | 🔗 |
| C | [TwoDimensionContext](./campaign-ext/TwoDimensionContext.md) | 🔗 |
| C | [TwoDimensionContextObject](./campaign-ext/TwoDimensionContextObject.md) | 🔗 |
| C | [TwoDimensionDrawContext](./campaign-ext/TwoDimensionDrawContext.md) | 🔗 |

## TaleWorlds.TwoDimension.Standalone (14)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [FrameworkDomain](./campaign-ext/FrameworkDomain.md) | 🔗 |
| C | [GraphicsContext](./campaign-ext/GraphicsContext.md) | 🔗 |
| C | [GraphicsForm](./campaign-ext/GraphicsForm.md) | 🔗 |
| I | [IMessageCommunicator](./campaign-ext/IMessageCommunicator.md) | 🔗 |
| C | [InputData](./campaign-ext/InputData.md) | 🔗 |
| C | [LayeredWindowController](./campaign-ext/LayeredWindowController.md) | 🔗 |
| C | [OpenGLTexture](./campaign-ext/OpenGLTexture.md) | 🔗 |
| C | [Shader](./engine/Shader.md) | 🔗 |
| C | [StandaloneInputManager](./campaign-ext/StandaloneInputManager.md) | 🔗 |
| C | [TwoDimensionPlatform](./campaign-ext/TwoDimensionPlatform.md) | 🔗 |
| C | [VertexArrayObject](./campaign-ext/VertexArrayObject.md) | 🔗 |
| C | [WindowsForm](./campaign-ext/WindowsForm.md) | 🔗 |
| C | [WindowsFramework](./campaign-ext/WindowsFramework.md) | 🔗 |
| E | [WindowsFrameworkThreadConfig](./campaign-ext/WindowsFrameworkThreadConfig.md) | 🔗 |

## TaleWorlds.TwoDimension.Standalone.Native.OpenGL (5)

| | 名称 Name | 文档 Doc |
|---|---|---|
| E | [BufferBindingTarget](./campaign-ext/BufferBindingTarget.md) | 🔗 |
| E | [ContextParameter](./campaign-ext/ContextParameter.md) | 🔗 |
| C | [OpenGlLoadException](./campaign-ext/OpenGlLoadException.md) | 🔗 |
| E | [ShaderType](./campaign-ext/ShaderType.md) | 🔗 |
| E | [TextureUnit](./campaign-ext/TextureUnit.md) | 🔗 |

## TaleWorlds.TwoDimension.Standalone.Native.Windows (24)

| | 名称 Name | 文档 Doc |
|---|---|---|
| E | [AlphaFormatFlags](./campaign-ext/AlphaFormatFlags.md) | 🔗 |
| S | [BitmapInfo](./campaign-ext/BitmapInfo.md) | 🔗 |
| S | [BitmapInfoHeader](./campaign-ext/BitmapInfoHeader.md) | 🔗 |
| S | [BlendFunction](./campaign-ext/BlendFunction.md) | 🔗 |
| E | [BlurBehindConstraints](./campaign-ext/BlurBehindConstraints.md) | 🔗 |
| E | [D3D_DRIVER_TYPE](./campaign-ext/D3D_DRIVER_TYPE.md) | 🔗 |
| C | [D3D11](./campaign-ext/D3D11.md) | 🔗 |
| C | [DXGI](./campaign-ext/DXGI.md) | 🔗 |
| S | [DXGI_ADAPTER_DESC](./campaign-ext/DXGI_ADAPTER_DESC.md) | 🔗 |
| S | [DXGI_OUTPUT_DESC](./campaign-ext/DXGI_OUTPUT_DESC.md) | 🔗 |
| E | [GeoTypeId](./campaign-ext/GeoTypeId.md) | 🔗 |
| I | [IDXGIAdapter](./campaign-ext/IDXGIAdapter.md) | 🔗 |
| I | [IDXGIFactory](./campaign-ext/IDXGIFactory.md) | 🔗 |
| I | [IDXGIOutput](./campaign-ext/IDXGIOutput.md) | 🔗 |
| C | [Kernel32](./campaign-ext/Kernel32.md) | 🔗 |
| S | [MONITORINFOEX](./campaign-ext/MONITORINFOEX.md) | 🔗 |
| S | [NativeMessage](./campaign-ext/NativeMessage.md) | 🔗 |
| S | [Point](./campaign-ext/Point.md) | 🔗 |
| S | [RECT](./campaign-ext/RECT.md) | 🔗 |
| C | [User32](./campaign-ext/User32.md) | 🔗 |
| S | [WindowClass](./campaign-ext/WindowClass.md) | 🔗 |
| E | [WindowMessage](./campaign-ext/WindowMessage.md) | 🔗 |
| E | [WindowShowStyle](./campaign-ext/WindowShowStyle.md) | 🔗 |
| E | [WindowStyle](./campaign-ext/WindowStyle.md) | 🔗 |
